...
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--tools:layout="@layout/fragment_camera"-->
    <!--/>-->
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.truethat.android.view.fragment.CameraFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/previewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.mScenePreviewVisibility? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.05"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          >
        <ImageButton
            android:id="@+id/parentMedia"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_content_description"
            android:onClick="@{() -> viewModel.displayParentMedia()}"
...
            app:srcCompat="@android:drawable/ic_media_previous"
            />
      </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/switchCameraButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:background="@null"
        android:contentDescription="@string/image_content_description"
        android:scaleType="fitCenter"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/switch_camera"
        />

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@null"
        android:contentDescription="@string/image_content_description"
        android:onClick="@{() -> viewModel.onCancel()}"
...
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_delete"
        tools:visibility="visible"
        />

    <ImageButton
        android:id="@+id/sendButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/image_content_description"
...
