<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/photoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.PhotoFragment"
    >

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/image_content_description"
      android:scaleType="centerCrop"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <com.truethat.android.view.custom.StyledTextView
      android:id="@+id/photoLoadErrorText"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:gravity="center"
      android:shadowColor="@color/shadow"
      android:shadowDx="1"
      android:shadowDy="1"
      android:shadowRadius="2"
      android:text="@string/photo_load_error"
      android:textColor="@color/error"
      android:textSize="16sp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.9"
      />
</android.support.constraint.ConstraintLayout>
